# public/swagger.json
@@ -118,36 +118,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"_LeanDocument__LeanDocument_T__": {
-				"properties": {},
-				"type": "object"
-			},
-			"Pick__LeanDocument_T_.Exclude_keyof_LeanDocument_T_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested__": {
-				"properties": {
-					"_id": {
-						"$ref": "#/components/schemas/_LeanDocument__LeanDocument_T__",
-						"description": "This documents _id."
-					},
-					"__v": {
-						"description": "This documents __v."
-					},
-					"id": {
-						"description": "The string version of this documents _id."
-					}
-				},
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit__LeanDocument_this_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested_": {
-				"$ref": "#/components/schemas/Pick__LeanDocument_T_.Exclude_keyof_LeanDocument_T_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"LeanDocument_this_": {
-				"$ref": "#/components/schemas/Omit__LeanDocument_this_.Exclude_keyofDocument._id-or-id-or-__v_-or-%24isSingleNested_"
-			},
-			"IUser": {
-				"$ref": "#/components/schemas/LeanDocument_this_"
-			},
 			"UserReqLogin": {
 				"properties": {
 					"userId": {
@@ -281,15 +251,16 @@
 			},
 			"CheckMsgReqGroup": {
 				"properties": {
-					"messages": {
-						"items": {
-							"$ref": "#/components/schemas/IMsgs"
-						},
-						"type": "array"
+					"groupId": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
 					}
 				},
 				"required": [
-					"messages"
+					"groupId",
+					"message"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -466,22 +437,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"allOf": [
-										{
-											"$ref": "#/components/schemas/IUser"
-										},
-										{
-											"properties": {
-												"_id": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"_id"
-											],
-											"type": "object"
-										}
-									]
+									"$ref": "#/components/schemas/SaveResUser"
 								}
 							}
 						}
@@ -652,9 +608,7 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/SaveResGroup"
-								}
+								"schema": {}
 							}
 						}
 					}
